[package]
name = "hyperpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.38"
zstd = "0.11.2"
bytes = "1.1.0"
rust-s3 = "0.31.0"
tokio = { version = "1.19.2", features = ["full"] }
sha256 = "1.0.3"
hex = "0.4.3"
anyhow = "1.0.58"
openssl = { version = "0.10.40", features = ["vendored"] }
